Fixed related videos overlapping the playlist control

--- a/app/assets/stylesheets/layout/lists/compact.css
+++ b/app/assets/stylesheets/layout/lists/compact.css
@@ -215,3 +215,7 @@
 .listing.compact .row div.tag-editor {
   display: block !important;
 }
+
+.listing.compact + section h1 {
+  margin-top: 10px;
+}
