--- a/app/assets/stylesheets/misc/headers.css
+++ b/app/assets/stylesheets/misc/headers.css
@@ -13,6 +13,6 @@ h1 > i.fa {
 
 .page h1 {
   margin: -20px;
-  margin-bottom: -20px;
   margin-bottom: 10px;
+  
 }
